Working on new Hashmap implementation